2007-12-17  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktooltip.c (gtk_tooltip_finalize),
	(gtk_tooltip_set_last_window): use a weak pointer to set last_window
	to NULL as soon as it's destroyed.  (#496546, patch from
	Benjamin Berg).

2007-12-17  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_update_button):
	always determine what arrow to show if show_sort_indicator is true.
	(#352738, Chris Vine).

2007-12-16  Mathias Hasselmann  <mathias@openismus.com>

	Prevent assertion failure in gtk_paned_find_neighbours. (#503824,
	Sébastien Granjoux)

	* gtk/gtkpaned.c: Call gtk_container_forall instead of
	gtk_container_foreach in get_child_panes.

2007-12-15  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_cell_layout_reorder):

	Plug leak: When reordering the info in the list the old node is
	removed but not freed. (#503569)

2007-12-15  Sebastian Dröge  <slomo@circular-chaos.org>

	* gdk/directfb/gdkcursor-directfb.c: (gdk_cursor_new_for_display):
	Use u32 instead of __u32 and u8 instead of __u8 as the other types
	are deprecated since DirectFB 1.0.0. If compiling with an older
	version define the new type name to the old types. Fixes bug #503190.

2007-12-14  Ray Strode  <rstrode@redhat.com>

	* gtk/gtkwidget.c: Suggest g_signal_connect (..., "realize", ...)
	instead of g_signal_connect_after (..., "realize", ...) as an
	alternative to gtk_widget_realize () (bug 503537).

2007-12-14  Michael Natterer  <mitch@imendio.com>

	* gdk/gdkinternals.h
	* gdk/gdkapplaunchcontext.h: #include <gio/gio.h> instead of
	individual files.

	* gdk/gdkapplaunchcontext.c
	* gdk/x11/gdkapplaunchcontext-x11.c: remove all gio includes, the
	header already includes everything now.

2007-12-14  Mathias Hasselmann  <mathias@openismus.com>

	Correct "Since:" tags for GtkPageSetup and GtkPrintSettings as
	next stable release shall be 2.16, not 2.14 - even if disagree.
