@@ -68,7 +68,9 @@ static const char gdk_settings_names[] =
   "Gtk/TouchscreenMode\0"     "gtk-touchscreen-mode\0"
   "Gtk/EnableAccels\0"        "gtk-enable-accels\0"
   "Gtk/EnableMnemonics\0"     "gtk-enable-mnemonics\0"
-  "Gtk/ScrolledWindowPlacement\0" "gtk-scrolled-window-placement\0";
+  "Gtk/ScrolledWindowPlacement\0" "gtk-scrolled-window-placement\0"
+  "Gtk/IMModule\0"            "gtk-im-module\0";
+
 
 static const struct
 {
@@ -113,5 +115,6 @@ static const struct
   { 1285, 1305 },
   { 1326, 1343 },
   { 1361, 1381 },
-  { 1402, 1430 }
+  { 1402, 1430 },
+  { 1460, 1473 }
 };
