@@ -1,3 +1,14 @@
+2007-12-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtksettings.c: Add a gtk-im-module GTK setting
+	* gdk/win32/gdkproperty-win32.c: 
+	* gdk/x11/gdksettings.c: ...and back it by a Gtk/IMModule X setting.
+
+	* gtk/gtkimmodule.[hc]: 
+	* gtk/gtkimmulticontext.[hc]: When determining the default context,
+	look at the gtk-im-module setting, and listen for changes to the
+	setting.  (#502446, Akira Tagoh)
+
 2007-12-17  Kristian Rietveld  <kris@imendio.com>
 
 	* gtk/gtktooltip.c (gtk_tooltip_finalize),
